--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1578,6 +1578,234 @@
   height: 1px;
   background-color: #858483;
 }
+#blog .section-4 {
+  margin-top: 50px;
+  width: 100%;
+  background-color: #fbf9f6;
+  height: 200px;
+}
+#blog .section-4 .icon {
+  text-align: center;
+  padding-top: 50px;
+}
+#blog .section-4 .icon i {
+  color: #d14031;
+  font-size: 40px;
+}
+#blog .section-4 .link {
+  margin-top: 30px;
+  text-align: center;
+}
+#blog .section-4 .link a {
+  color: black;
+  text-decoration: none;
+  font-family: cursive;
+}
+#blog .section-4 .link a:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog .section-6 {
+  margin-left: 100px;
+}
+#blog .section-6 .country {
+  margin-top: 30px;
+}
+#blog .section-6 .country p {
+  color: gray;
+  font-family: initial;
+}
+#blog .section-6 .name {
+  margin-top: -15px;
+}
+#blog .section-6 .name h4 {
+  cursor: pointer;
+  font-family: initial;
+}
+#blog .section-6 .name h4:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog .section-6 .description p {
+  width: 198px;
+}
+#blog .section-6 .borders {
+  display: flex;
+  gap: 30px;
+}
+#blog .section-6 .borders .border {
+  width: 100%;
+}
+#blog .section-6 .logo {
+  margin-top: -18px;
+}
+#blog .section-6 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog .section-7 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog .section-7 .categories h5 {
+  font-family: initial;
+}
+#blog .section-7 .category {
+  margin-top: 15px;
+}
+#blog .section-7 .category p {
+  color: gray;
+  font-family: initial;
+}
+#blog .section-7 .category p:hover {
+  color: #d14031;
+  transition: 0.5s;
+  cursor: pointer;
+}
+#blog .section-7 .borders {
+  display: flex;
+  gap: 30px;
+}
+#blog .section-7 .borders .border {
+  width: 100%;
+}
+#blog .section-7 .logo {
+  margin-top: -18px;
+}
+#blog .section-7 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog .section-8 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog .section-8 .image img {
+  width: 100%;
+}
+#blog .section-8 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog .section-8 .borders .border {
+  width: 100%;
+}
+#blog .section-8 .logo {
+  margin-top: -18px;
+}
+#blog .section-8 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog .section-9 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog .section-9 .tags h5 {
+  font-family: initial;
+}
+#blog .section-9 .tags-name {
+  margin-top: 15px;
+}
+#blog .section-9 .tags-name p {
+  color: gray;
+  font-family: initial;
+  font-size: 20px;
+}
+#blog .section-9 .tags-name p:hover {
+  color: #d14031;
+  transition: 0.5s;
+  cursor: pointer;
+}
+#blog .section-9 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog .section-9 .borders .border {
+  width: 100%;
+}
+#blog .section-9 .logo {
+  margin-top: -18px;
+}
+#blog .section-9 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog .section-10 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog .section-10 .socials h5 {
+  font-family: initial;
+}
+#blog .section-10 .icons {
+  margin-left: -33px;
+  margin-top: 20px;
+}
+#blog .section-10 .icons ul {
+  display: flex;
+  gap: 15px;
+}
+#blog .section-10 .icons ul li {
+  list-style: none;
+}
+#blog .section-10 .icons ul li a {
+  text-decoration: none;
+}
+#blog .section-10 .icons ul li a i {
+  color: black;
+}
+#blog .section-10 .icons ul li a i:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog .section-10 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog .section-10 .borders .border {
+  width: 100%;
+}
+#blog .section-10 .logo {
+  margin-top: -18px;
+}
+#blog .section-10 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog .section-11 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog .section-11 .latest-titles h5 {
+  font-family: initial;
+}
+#blog .section-11 .image-name {
+  display: flex;
+}
+#blog .section-11 .image-name .image img {
+  width: 70px;
+}
+#blog .section-11 .image-name .name-price {
+  margin-left: 15px;
+  margin-top: 10px;
+}
+#blog .section-11 .image-name .name-price a {
+  text-decoration: none;
+  font-family: initial;
+  color: gray;
+  font-size: 20px;
+}
+#blog .section-11 .image-name .name-price a:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog .section-11 .image-name .name-price p {
+  font-family: initial;
+}
 
 #footer {
   margin-top: 150px;
