--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -214,6 +214,10 @@
             margin-top: 33px;
             input{
                 cursor: pointer;
+                &:focus{
+                    box-shadow: none;
+                    border-color: rgba(128, 128, 128, 0.2117647059);
+                }
             }
         }
         .login-button{
@@ -222,8 +226,10 @@
             button{
                 width: 130px;
                 height: 50px;
-                background-color: rgb(241, 6, 6);
+                background-color: #d14031;
                 color: white;
+                border: none;
+                font-family: initial;
                 &:hover{
                     background-color:rgb(172, 2, 2) ;
                     transition: 0.5s;
