--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -160,7 +160,7 @@
 
 }
 
-#login-form {
+#register-form {
     margin-top: 100px;
 
     .login {
@@ -270,8 +270,10 @@
             button{
                 width: 130px;
                 height: 50px;
-                background-color: rgb(241, 6, 6);
+                background-color: #d14031;
                 color: white;
+                font-family: initial;
+                border: none;
                 &:hover{
                     background-color:rgb(172, 2, 2) ;
                     transition: 0.5s;
