--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -176,98 +176,115 @@
 
         .sort {
             width: 250px !important;
-            .form-select{
+
+            .form-select {
                 border-radius: inherit;
-               color: gray;
-               height: 50px;
+                color: gray;
+                height: 50px;
+
+                &:focus {
+                    box-shadow: none;
+                    border-color: rgba(128, 128, 128, 0.2117647059);
+                }
             }
         }
     }
 
     .products {
         margin-top: 50px;
+
         .image {
             img {
                 width: 100%;
             }
         }
+
         .name {
             margin-top: 10px;
-    
+
             a {
                 text-decoration: none;
                 color: gray;
                 font-family: monospace;
-    
+
                 &:hover {
                     color: red;
                     transition: 0.8s;
                 }
             }
         }
-    
+
         .category-name {
             a {
                 text-decoration: none;
                 color: black;
                 font-family: initial;
                 font-size: 24px;
-    
+
                 &:hover {
                     color: red;
                     transition: 0.8s;
                 }
             }
         }
-    
+
         .price-button {
             display: flex;
             margin-top: 15px;
-    
+
             p {
                 color: gray;
                 font-family: monospace;
             }
-    
+
             button {
                 border: none;
                 margin-left: 167px;
             }
         }
     }
-    .pagination{
+
+    .pagination {
         justify-content: center;
         margin-top: 100px;
-        .left-icon{
-            i{
+
+        .left-icon {
+            i {
                 color: gray;
                 cursor: pointer;
-                &:hover{
+
+                &:hover {
                     color: black;
                     transition: 0.5s;
                 }
             }
         }
-        .number{
+
+        .number {
             display: flex;
             gap: 15px;
             margin-left: 15px;
-            p{
+
+            p {
                 color: gray;
                 cursor: pointer;
                 font-family: math;
-                &:hover{
+
+                &:hover {
                     color: black;
                     transition: 0.5s;
                 }
             }
         }
-        .right-icon{
+
+        .right-icon {
             margin-left: 15px;
-            i{
+
+            i {
                 color: gray;
                 cursor: pointer;
-                &:hover{
+
+                &:hover {
                     color: black;
                     transition: 0.5s;
                 }
@@ -276,34 +293,302 @@
     }
 
 
-    .right-section{
+    .right-section {
         margin-left: 80px;
-        .search{
-            input{
+
+        .search {
+            input {
                 height: 50px;
                 border: 1px solid #80808036;
                 width: 100%;
-                &::placeholder{
+
+                &::placeholder {
                     padding-left: 10px;
                 }
-                
+
             }
         }
-        .filter{
+
+        .filter {
             margin-top: 40px;
             font-weight: bold;
+
+            h5 {
+                font-family: initial;
+            }
         }
-        .range{
-            input{
+
+        .product-price {
+            font-family: 'Poppins', sans-serif;
+
+            .price-title {
+                padding: 2px 20px;
+
+                h3 {
+                    font-size: 18px;
+                    font-weight: 600;
+                    text-transform: capitalize;
+                }
+            }
+
+            .price-filter {
+
+                .card {
+                    border-radius: 5px;
+                    padding: 0 20px 20px 20px;
+                }
+
+                h4 {
+                    color: #000;
+                    margin-bottom: 20px;
+                    text-align: center;
+                    font-weight: 600;
+                }
+
+                .price-content {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin: 0 30px;
+                }
+
+                label {
+                    font-size: 12px;
+                    font-weight: 500;
+                }
+
+                p {
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+
+                .range-slider {
+                    position: relative;
+                    margin: 15px 0 30px 0;
+                }
+
+                input[type=range] {
+                    width: 100%;
+                    background: transparent;
+                    position: absolute;
+                    left: 0;
+                }
+
+                input[type=range]::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    height: 15px;
+                    width: 15px;
+                    border-radius: 50%;
+                    background: #36b37e;
+                    cursor: pointer;
+                    margin-top: -5px;
+                    position: relative;
+                    z-index: 1;
+                }
+
+                input[type=range]::-webkit-slider-runnable-track {
+                    width: 100%;
+                    height: 5px;
+                    background: #e8e8e8;
+                    border-radius: 3px;
+                    border: none;
+                }
+            }
+        }
+
+        .borders {
+            display: flex;
+            gap: 30px;
+            margin-top: 30px;
+
+            .border {
                 width: 100%;
+            }
+        }
+
+        .logo {
+            margin-top: -18px;
+
+            span {
+                font-size: 20px;
+                margin-left: 107px;
+            }
+        }
+
+        .top-5 {
+            margin-top: 20px;
+
+            h5 {
+                font-family: initial;
+            }
+        }
+
+        .images {
+            display: flex;
+            gap: 5px;
+            margin-top: 20px;
+
+            img {
+                width: 41px;
+                height: 80px;
+            }
+        }
+
+        .borders {
+            display: flex;
+            gap: 30px;
+            margin-top: 30px;
+
+            .border {
+                width: 100%;
+            }
+        }
+
+        .logo {
+            margin-top: -18px;
+
+            span {
+                font-size: 20px;
+                margin-left: 107px;
+            }
+        }
+
+        .categories {
+            margin-top: 20px;
+
+            h5 {
+                font-family: initial;
+            }
+        }
+
+        .product-categories {
+
+            margin-top: 15px;
+
+            .product-category {
+                display: flex;
+
+                span {
+                    margin-left: 10px;
+                    font-family: "Josefin Sans", sans-serif;
+                    color: gray;
+                    cursor: pointer;
+                }
+
+                p {
+                    font-family: "Josefin Sans", sans-serif;
+                    color: gray;
+                    cursor: pointer;
+
+                    &:hover {
+                        color: #d14031;
+                        transition: 0.5s;
+                    }
+                }
+            }
+
+        }
+
+        .borders {
+            display: flex;
+            gap: 30px;
+            margin-top: 30px;
+
+            .border {
+                width: 100%;
+            }
+        }
+
+        .logo {
+            margin-top: -18px;
+
+            span {
+                font-size: 20px;
+                margin-left: 107px;
+            }
+        }
+
+        .tags {
+            margin-top: 20px;
+
+            h5 {
+                font-family: initial;
+            }
+        }
+
+        .tags-name {
+            margin-top: 15px;
+
+            p {
+                color: gray;
+                font-family: initial;
+                font-size: 20px;
+
+                &:hover {
+                    color: #d14031;
+                    transition: 0.5s;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .instagram {
+            margin-top: 20px;
+
+            h5 {
+                font-family: initial;
+            }
+        }
+
+        .instagram-image {
+            display: flex;
+            gap: 5px;
+            margin-top: 20px;
+
+            a {
+                img {
+                    width: 100%;
+                }
+            }
+
+        }
+
+        .socials {
+            margin-top: 20px;
+
+            h5 {
+                font-family: initial;
+            }
+        }
+
+        .icons {
+            margin-left: -33px;
+            margin-top: 20px;
+
+            ul {
+                display: flex;
+                gap: 15px;
+
+                li {
+                    list-style: none;
+
+                    a {
+                        text-decoration: none;
+
+                        i {
+                            color: black;
+
+                            &:hover {
+                                color: #d14031;
+                                transition: 0.5s;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
 }
-
-
-
-
 
 #footer {
     margin-top: 150px;
