Add New Section

--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -118,6 +118,7 @@
         input {
             border: none;
             outline: none;
+            padding-left: 15px;
         }
     }
 
@@ -185,6 +186,7 @@
             height: 50px;
             border: 1px solid gray;
             outline: none;
+            padding-left: 15px;
         }
     }
 
@@ -204,6 +206,7 @@
             height: 50px;
             border: 1px solid gray;
             outline: none;
+            padding-left: 15px;
         }
     }
 
@@ -223,6 +226,7 @@
             height: 50px;
             border: 1px solid gray;
             outline: none;
+            padding-left: 15px;
         }
     }
 
@@ -242,6 +246,7 @@
             height: 50px;
             border: 1px solid gray;
             outline: none;
+            padding-left: 15px;
         }
     }
 
@@ -261,6 +266,7 @@
             height: 50px;
             border: 1px solid gray;
             outline: none;
+            padding-left: 15px;
         }
     }
 
