--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3409,6 +3409,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #login-form .password-label {
   margin-top: 30px;
@@ -3424,6 +3425,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #login-form .remenber-login {
   display: flex;
@@ -3678,6 +3680,7 @@
 #navbar .search-input input {
   border: none;
   outline: none;
+  padding-left: 15px;
 }
 #navbar .login-register {
   width: 230px;
@@ -3731,6 +3734,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #register-form .last-name-label {
   margin-top: 30px;
@@ -3746,6 +3750,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #register-form .email-address-label {
   margin-top: 30px;
@@ -3761,6 +3766,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #register-form .password-label {
   margin-top: 30px;
@@ -3776,6 +3782,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #register-form .confirm-password-label {
   margin-top: 30px;
@@ -3791,6 +3798,7 @@
   height: 50px;
   border: 1px solid gray;
   outline: none;
+  padding-left: 15px;
 }
 #register-form .register .register-button {
   margin-top: 20px;
@@ -3806,6 +3814,229 @@
 #register-form .register .register-button button:hover {
   background-color: rgb(172, 2, 2);
   transition: 0.5s;
+}
+
+#footer {
+  margin-top: 150px;
+  background-color: #282828;
+  width: 100%;
+  height: 450px;
+}
+#footer .left1 {
+  margin-top: 80px;
+}
+#footer .left1 h4 {
+  color: white;
+}
+#footer .left1 .story {
+  margin-top: 40px;
+}
+#footer .left1 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left1 .story p:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left2 {
+  margin-top: 80px;
+}
+#footer .left2 h4 {
+  color: white;
+}
+#footer .left2 .story {
+  margin-top: 40px;
+}
+#footer .left2 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left2 .story p:nth-child(3) {
+  margin-top: -15px;
+}
+#footer .left2 .icons a i {
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .icons a i:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left3 {
+  margin-top: 80px;
+}
+#footer .left3 h4 {
+  color: white;
+}
+#footer .left3 .story {
+  margin-top: 40px;
+}
+#footer .left3 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left3 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left3 .email-input input {
+  background-color: #282828;
+  border: 1px solid rgb(153, 153, 153);
+  width: 260px;
+  height: 50px;
+}
+#footer .right {
+  margin-top: 80px;
+}
+#footer .right h4 {
+  color: white;
+}
+#footer .right .story {
+  margin-top: 40px;
+}
+#footer .right .story .images1 {
+  display: flex;
+  gap: 10px;
+}
+#footer .right .story .images1 img {
+  width: 100%;
+}
+#footer .right .story .images2 {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+#footer .right .story .images2 img {
+  width: 100%;
+}
+#footer .btn {
+  margin-left: 350px;
+}
+#footer .btn #topbtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+#footer .btn #topbtn i {
+  color: #909090;
+  font-size: 23px;
+}
+
+#navbar .logo-pages {
+  display: flex;
+}
+#navbar .logo-pages .logo {
+  width: 20px;
+  height: 20px;
+}
+#navbar .logo-pages .logo img {
+  width: 70px;
+  margin-top: 40px;
+}
+#navbar .logo-pages .pages {
+  margin-left: 70px;
+  margin-top: 55px;
+  font-size: 19px;
+}
+#navbar .logo-pages .pages ul {
+  display: flex;
+  gap: 20px;
+}
+#navbar .logo-pages .pages ul li {
+  list-style: none;
+}
+#navbar .logo-pages .pages ul li a {
+  text-decoration: none;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+}
+#navbar .basket-search {
+  margin-top: 55px;
+  display: flex;
+  margin-left: 476px;
+}
+#navbar .basket-search .basket {
+  display: flex;
+}
+#navbar .basket-search .basket a i {
+  color: black;
+  font-size: 20px;
+}
+#navbar .basket-search .basket .basket-number {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  margin-top: -7px;
+  margin-left: -5px;
+  position: relative;
+  margin-right: 10px;
+}
+#navbar .basket-search .basket .basket-number span {
+  font-size: 13px;
+  position: absolute;
+  left: 3px;
+  bottom: -2px;
+}
+#navbar .basket-search .search {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .search i {
+  font-size: 20px;
+}
+#navbar .basket-search .wishlist {
+  margin-left: 12px;
+}
+#navbar .basket-search .wishlist a i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .wishlist .border {
+  margin-left: 10px;
+}
+#navbar .basket-search .user {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .user i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .user .border {
+  margin-left: 10px;
+}
+#navbar .search-input {
+  right: 113px;
+  position: absolute;
+  top: 103px;
+}
+#navbar .search-input input {
+  border: none;
+  outline: none;
+  padding-left: 15px;
+}
+#navbar .login-register {
+  width: 230px;
+  height: 80px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 7px;
+  position: absolute;
+  right: 109px;
+  top: 91px;
+}
+#navbar .login-register a {
+  margin-left: 20px;
+  font-size: 17px;
+  padding-top: 7px;
+  text-decoration: none;
+  color: black;
+}
+#navbar .login-register .border {
+  margin-top: 13px;
 }
 
 #footer {
