--- a/assets/scss/_forgotpassword.scss
+++ b/assets/scss/_forgotpassword.scss
@@ -118,7 +118,6 @@
         input {
             border: none;
             outline: none;
-            padding-left: 15px;
         }
     }
 
@@ -161,201 +160,58 @@
 
 }
 
-#detail {
+#login-form {
     margin-top: 100px;
 
-    .product-image {
-        position: sticky;
-        top: 50px !important;
-        left: 0;
-        img {
+    .login {
+        h2 {
+            font-family: monospace;
+        }
+    }
+
+    .username-label {
+        margin-top: 30px;
+
+        label {
+            color: gray;
+        }
+    }
+
+    .username-input {
+        margin-top: 10px;
+
+        input {
             width: 100%;
+            height: 50px;
+            border: 1px solid gray;
+            outline: none;
+            padding-left: 15px;
         }
     }
 
-    .section-1 {
-        .name {
-            p {
-                color: gray;
-                font-family: "Josefin Sans", sans-serif;
-                font-size: 17px;
-                cursor: pointer;
+    .login-button {
+        margin-top: 20px;
 
-                &:hover {
-                    color: rgb(241, 6, 6);
-                    transition: 1s;
-                }
-            }
-        }
+        button {
+            width: 130px;
+            height: 50px;
+            background-color: #d14031;
+            color: white;
+            border: none;
+            font-family: initial;
 
-        .wellness {
-            margin-top: -15px;
-
-            h2 {
-                font-family: auto;
-            }
-        }
-
-        .price {
-            p {
-                font-size: 20px;
-            }
-        }
-
-        .description {
-            margin-top: 20px;
-
-            p {
-                font-family: auto;
-                color: gray;
-            }
-        }
-
-        .add-basket-button {
-            margin-top: 20px;
-
-            button {
-                width: 200px;
-                height: 50px;
-                background-color: #d14031;
-                color: white;
-                border: none;
-                font-family: auto;
-
-                &:hover {
-                    background-color: rgb(172, 2, 2);
-                    transition: 0.5s;
-                }
-            }
-        }
-
-        .sku-code {
-            display: flex;
-            margin-top: 50px;
-
-            p {
-                color: gray;
-                font-family: auto;
-            }
-
-            span {
-                color: gray;
-                font-family: auto;
-            }
-        }
-
-        .categories {
-            display: flex;
-
-            p {
-                color: gray;
-                font-family: auto;
-            }
-
-            span {
-                color: gray;
-                font-family: auto;
-            }
-        }
-
-        .tags {
-            display: flex;
-
-            p {
-                color: gray;
-                font-family: auto;
-            }
-
-            span {
-                color: gray;
-                font-family: auto;
-            }
-        }
-
-        .border {
-            margin-top: 20px;
-        }
-
-        .authorimage-authorname {
-            margin-top: 50px;
-            display: flex;
-
-            .author-image {
-                img {
-                    width: 80px;
-                }
-            }
-
-            .author-name {
-                margin-left: 20px;
-
-                p {
-                    color: gray;
-                    font-family: auto;
-                }
-
-                span {
-                    font-size: 20px;
-                    font-family: auto;
-                }
-            }
-        }
-
-        .author-description {
-            margin-top: 20px;
-
-            p {
-                color: gray;
-                font-family: auto;
-            }
-        }
-
-        .author-comment {
-            margin-top: 50px;
-            background-color: #fbf9f6;
-            height: 250px;
-
-            .starts {
-                display: flex;
-                gap: 5px;
-                padding-top: 40px;
-                margin-left: 50px;
-            }
-
-            .comment{
-                p{
-                    color: gray;
-                    font-family: auto;
-                    width: 680px;
-                    margin-left: 50px;
-                    margin-top: 20px;
-                    font-size: 18px;
-                }
-            }
-
-            .logo-name{
-                display: flex;
-                margin-left: 50px;
-                padding-top: 10px;
-                .logo-image{
-                    img{
-
-                    }
-                }
-                .names{
-                    margin-left: 10px;
-                    p{
-                        font-family: auto;
-                        font-size: 18px;
-                    }
-                }
+            &:hover {
+                background-color: rgb(172, 2, 2);
+                transition: 0.5s;
             }
         }
     }
+
+    
 }
 
 #footer {
-    margin-top: 150px;
+
     background-color: #282828;
     width: 100%;
     height: 450px;
