--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -4039,8 +4039,438 @@
   margin-top: 13px;
 }
 
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#detail {
+  margin-top: 100px;
+}
+#detail .product-image {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 50px !important;
+  left: 0;
+}
+#detail .product-image img {
+  width: 100%;
+}
+#detail .section-1 .name p {
+  color: gray;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+}
+#detail .section-1 .name p:hover {
+  color: rgb(241, 6, 6);
+  transition: 1s;
+}
+#detail .section-1 .wellness {
+  margin-top: -15px;
+}
+#detail .section-1 .wellness h2 {
+  font-family: auto;
+}
+#detail .section-1 .price p {
+  font-size: 20px;
+}
+#detail .section-1 .description {
+  margin-top: 20px;
+}
+#detail .section-1 .description p {
+  font-family: auto;
+  color: gray;
+}
+#detail .section-1 .add-basket-button {
+  margin-top: 20px;
+}
+#detail .section-1 .add-basket-button button {
+  width: 200px;
+  height: 50px;
+  background-color: #d14031;
+  color: white;
+  border: none;
+  font-family: auto;
+}
+#detail .section-1 .add-basket-button button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#detail .section-1 .sku-code {
+  display: flex;
+  margin-top: 50px;
+}
+#detail .section-1 .sku-code p {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .sku-code span {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .categories {
+  display: flex;
+}
+#detail .section-1 .categories p {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .categories span {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .tags {
+  display: flex;
+}
+#detail .section-1 .tags p {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .tags span {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .border {
+  margin-top: 20px;
+}
+#detail .section-1 .authorimage-authorname {
+  margin-top: 50px;
+  display: flex;
+}
+#detail .section-1 .authorimage-authorname .author-image img {
+  width: 80px;
+}
+#detail .section-1 .authorimage-authorname .author-name {
+  margin-left: 20px;
+}
+#detail .section-1 .authorimage-authorname .author-name p {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .authorimage-authorname .author-name span {
+  font-size: 20px;
+  font-family: auto;
+}
+#detail .section-1 .author-description {
+  margin-top: 20px;
+}
+#detail .section-1 .author-description p {
+  color: gray;
+  font-family: auto;
+}
+#detail .section-1 .author-comment {
+  margin-top: 50px;
+  background-color: #fbf9f6;
+  height: 250px;
+}
+#detail .section-1 .author-comment .starts {
+  display: flex;
+  gap: 5px;
+  padding-top: 40px;
+  margin-left: 50px;
+}
+#detail .section-1 .author-comment .comment p {
+  color: gray;
+  font-family: auto;
+  width: 680px;
+  margin-left: 50px;
+  margin-top: 20px;
+  font-size: 18px;
+}
+#detail .section-1 .author-comment .logo-name {
+  display: flex;
+  margin-left: 50px;
+  padding-top: 10px;
+}
+#detail .section-1 .author-comment .logo-name .names {
+  margin-left: 10px;
+}
+#detail .section-1 .author-comment .logo-name .names p {
+  font-family: auto;
+  font-size: 18px;
+}
+
 #footer {
   margin-top: 150px;
+  background-color: #282828;
+  width: 100%;
+  height: 450px;
+}
+#footer .left1 {
+  margin-top: 80px;
+}
+#footer .left1 h4 {
+  color: white;
+}
+#footer .left1 .story {
+  margin-top: 40px;
+}
+#footer .left1 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left1 .story p:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left2 {
+  margin-top: 80px;
+}
+#footer .left2 h4 {
+  color: white;
+}
+#footer .left2 .story {
+  margin-top: 40px;
+}
+#footer .left2 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left2 .story p:nth-child(3) {
+  margin-top: -15px;
+}
+#footer .left2 .icons a i {
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .icons a i:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left3 {
+  margin-top: 80px;
+}
+#footer .left3 h4 {
+  color: white;
+}
+#footer .left3 .story {
+  margin-top: 40px;
+}
+#footer .left3 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left3 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left3 .email-input input {
+  background-color: #282828;
+  border: 1px solid rgb(153, 153, 153);
+  width: 260px;
+  height: 50px;
+}
+#footer .right {
+  margin-top: 80px;
+}
+#footer .right h4 {
+  color: white;
+}
+#footer .right .story {
+  margin-top: 40px;
+}
+#footer .right .story .images1 {
+  display: flex;
+  gap: 10px;
+}
+#footer .right .story .images1 img {
+  width: 100%;
+}
+#footer .right .story .images2 {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+#footer .right .story .images2 img {
+  width: 100%;
+}
+#footer .btn {
+  margin-left: 350px;
+}
+#footer .btn #topbtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+#footer .btn #topbtn i {
+  color: #909090;
+  font-size: 23px;
+}
+
+#navbar .logo-pages {
+  display: flex;
+}
+#navbar .logo-pages .logo {
+  width: 20px;
+  height: 20px;
+}
+#navbar .logo-pages .logo img {
+  width: 70px;
+  margin-top: 40px;
+}
+#navbar .logo-pages .pages {
+  margin-left: 70px;
+  margin-top: 55px;
+  font-size: 19px;
+}
+#navbar .logo-pages .pages ul {
+  display: flex;
+  gap: 20px;
+}
+#navbar .logo-pages .pages ul li {
+  list-style: none;
+}
+#navbar .logo-pages .pages ul li a {
+  text-decoration: none;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+}
+#navbar .basket-search {
+  margin-top: 55px;
+  display: flex;
+  margin-left: 476px;
+}
+#navbar .basket-search .basket {
+  display: flex;
+}
+#navbar .basket-search .basket a i {
+  color: black;
+  font-size: 20px;
+}
+#navbar .basket-search .basket .basket-number {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  margin-top: -7px;
+  margin-left: -5px;
+  position: relative;
+  margin-right: 10px;
+}
+#navbar .basket-search .basket .basket-number span {
+  font-size: 13px;
+  position: absolute;
+  left: 3px;
+  bottom: -2px;
+}
+#navbar .basket-search .search {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .search i {
+  font-size: 20px;
+}
+#navbar .basket-search .wishlist {
+  margin-left: 12px;
+}
+#navbar .basket-search .wishlist a i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .wishlist .border {
+  margin-left: 10px;
+}
+#navbar .basket-search .user {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .user i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .user .border {
+  margin-left: 10px;
+}
+#navbar .search-input {
+  right: 113px;
+  position: absolute;
+  top: 103px;
+}
+#navbar .search-input input {
+  border: none;
+  outline: none;
+}
+#navbar .login-register {
+  width: 230px;
+  height: 80px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 7px;
+  position: absolute;
+  right: 109px;
+  top: 91px;
+}
+#navbar .login-register a {
+  margin-left: 20px;
+  font-size: 17px;
+  padding-top: 7px;
+  text-decoration: none;
+  color: black;
+}
+#navbar .login-register .border {
+  margin-top: 13px;
+}
+
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#login-form {
+  margin-top: 100px;
+}
+#login-form .login h2 {
+  font-family: monospace;
+}
+#login-form .username-label {
+  margin-top: 30px;
+}
+#login-form .username-label label {
+  color: gray;
+}
+#login-form .username-input {
+  margin-top: 10px;
+}
+#login-form .username-input input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid gray;
+  outline: none;
+  padding-left: 15px;
+}
+#login-form .login-button {
+  margin-top: 20px;
+}
+#login-form .login-button button {
+  width: 130px;
+  height: 50px;
+  background-color: #d14031;
+  color: white;
+  border: none;
+  font-family: initial;
+}
+#login-form .login-button button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+
+#footer {
   background-color: #282828;
   width: 100%;
   height: 450px;
