Add New Section

--- a/assets/scss/_forgotpassword.scss
+++ b/assets/scss/_forgotpassword.scss
@@ -160,7 +160,7 @@
 
 }
 
-#login-form {
+#forgot-password-form {
     margin-top: 100px;
 
     .login {
@@ -169,7 +169,7 @@
         }
     }
 
-    .username-label {
+    .email-label {
         margin-top: 30px;
 
         label {
@@ -177,7 +177,7 @@
         }
     }
 
-    .username-input {
+    .email-input {
         margin-top: 10px;
 
         input {
@@ -189,7 +189,7 @@
         }
     }
 
-    .login-button {
+    .send-button {
         margin-top: 20px;
 
         button {
@@ -206,7 +206,6 @@
             }
         }
     }
-
     
 }
 
