--- a/assets/scss/_productdetail.scss
+++ b/assets/scss/_productdetail.scss
@@ -354,6 +354,159 @@
     }
 }
 
+#review-area{
+    .tab-menu {
+        margin-top: 100px;
+        ul {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+
+            .active{
+                transition: 1s;
+                background-color: #198754;
+                
+            }
+            li {
+                list-style: none;
+                border: 1px solid black;
+                width: 150px;
+                text-align: center;
+                height: 40px;
+                padding-top: 7px;
+                cursor: pointer;
+                a {
+                    text-decoration: none;
+                    color: black;
+                }
+            }
+        }
+
+        
+    }
+
+    .description{
+        margin-top: 20px;
+        p{
+            text-align: center;
+            font-family: auto;
+            color: gray;
+        }
+    }
+
+    .additional-information{
+        p{
+            
+        }
+    }
+
+    .filterDiv {
+        display: none ;
+    }
+    
+    .show {
+        display: block;
+    }
+
+
+    .user-comment{
+        margin-top: 20px;
+        text-align: center;
+        p{
+            font-size: 20px;
+            font-family: auto;
+            font-weight: bold;
+        }
+        input{
+            width: 50%;
+            height: 50px;
+            border: 1px solid rgba(128, 128, 128, 0.2117647059);
+            padding-left: 15px;
+            outline: none;
+        }
+
+        textarea{
+            width: 50%;
+            border: 1px solid rgba(128, 128, 128, 0.2117647059);
+            padding-left: 15px;
+            padding-top: 15px;
+            outline: none;
+        }
+
+        .submit-button {
+            margin-top: 20px;
+    
+            button {
+                width: 130px;
+                height: 50px;
+                background-color: #d14031;
+                color: white;
+                border: none;
+                font-family: initial;
+    
+                &:hover {
+                    background-color: rgb(172, 2, 2);
+                    transition: 0.5s;
+                }
+            }
+        }
+    }
+}
+
+#related-products{
+    margin-top: 100px;
+    .related-products-word{
+        h2{
+            font-family: auto;
+        }
+    }
+
+    .related-products{
+        margin-top: 50px;
+        .image{
+            img{
+                cursor: pointer;
+                width: 100%;
+            }
+        }
+        .author-name{
+            margin-top: 10px;
+            p{
+                color: gray;
+                font-family: auto;
+                font-size: 18px;
+                cursor: pointer;
+                &:hover{
+                    color: rgb(241, 6, 6);
+                    transition: 1s;
+                }
+            }
+        }
+        .book-name{
+            margin-top: -10px;
+            span{
+                font-family: auto;
+                font-weight: bold;
+                font-size: 18px;
+                cursor: pointer;
+                &:hover{
+                    color: rgb(241, 6, 6);
+                    transition: 1s;
+                }
+            }
+        }
+
+        .book-price{
+            margin-top: 5px;
+            p{
+                color: gray;
+                font-family: auto;
+            }
+        }
+    }
+    
+}
+
 #footer {
     margin-top: 150px;
     background-color: #282828;
